--- a/LinkerPlayer/Styles/StylesRepository.xaml
+++ b/LinkerPlayer/Styles/StylesRepository.xaml
@@ -1,4 +1,4 @@
-﻿<ResourceDictionary
+<ResourceDictionary
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:audio="clr-namespace:LinkerPlayer.Audio"
@@ -9,7 +9,8 @@
 
   <system:Double x:Key="FontSizeTitle">22</system:Double>
   <system:Double x:Key="FontSizeHeading">16</system:Double>
-  <system:Double x:Key="FontSizeNormal">14</system:Double>
+  <system:Double x:Key="FontSizeNormal">13</system:Double>
+  <system:Double x:Key="FontSizeSamll">10</system:Double>
   <system:Double x:Key="FontSizeButton">14</system:Double>
 
   <!--
@@ -576,28 +577,14 @@
   -->
   <!--  Shared DataGrid Visual Style  -->
   <Style x:Key="SharedDataGridStyle" TargetType="DataGrid">
-    <Setter Property="Background" Value="Transparent" />
-    <Setter Property="BorderThickness" Value="0" />
-    <Setter Property="GridLinesVisibility" Value="None" />
-    <Setter Property="RowHeaderWidth" Value="0" />
-    <Setter Property="RowHeight" Value="20" />
-    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-    <Setter Property="VerticalContentAlignment" Value="Stretch" />
-    <Setter Property="Template">
-      <Setter.Value>
-        <ControlTemplate TargetType="{x:Type DataGrid}">
-          <Border
-            Background="{TemplateBinding Background}"
-            BorderBrush="{TemplateBinding BorderBrush}"
-            BorderThickness="{TemplateBinding BorderThickness}">
-            <ScrollViewer x:Name="DG_ScrollViewer" Focusable="False">
-              <ItemsPresenter />
-            </ScrollViewer>
-          </Border>
-        </ControlTemplate>
-      </Setter.Value>
-    </Setter>
-  </Style>
+     <Setter Property="Background" Value="Transparent" />
+     <Setter Property="BorderThickness" Value="0" />
+     <Setter Property="GridLinesVisibility" Value="None" />
+     <Setter Property="RowHeaderWidth" Value="0" />
+     <Setter Property="RowHeight" Value="20" />
+     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+     <Setter Property="VerticalContentAlignment" Value="Stretch" />
+   </Style>
 
   <!--  Shared DataGridColumnHeader Style  -->
   <Style x:Key="SharedDataGridColumnHeaderStyle" TargetType="DataGridColumnHeader">
