--- a/LinkerPlayer/Themes/Dark.xaml
+++ b/LinkerPlayer/Themes/Dark.xaml
@@ -1,10 +1,10 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
   <Color x:Key="TitleBarForegroundColor">#C8C8C8</Color>
-  <Color x:Key="TitleBarBackgroundColor">#373737</Color>
+  <Color x:Key="TitleBarBackgroundColor">#202020</Color>
 
-  <Color x:Key="MainWindowGradientStartColor">#373737</Color>
-  <Color x:Key="MainWindowGradientEndColor">#525252</Color>
+  <Color x:Key="MainWindowGradientStartColor">#202020</Color>
+  <Color x:Key="MainWindowGradientEndColor">#4F4F4F</Color>
   <Color x:Key="MainWindowBorderColor">#B0B0B0</Color>
 
   <Color x:Key="ControlAccentLightColor">#29b4b4</Color>
@@ -29,10 +29,10 @@
   <Color x:Key="PlaylistTabSelectedBackgroundColor">#707070</Color>
 
   <Color x:Key="TrackListColumnHeaderForegroundColor">#F0F0F0</Color>
-  <Color x:Key="TrackListColumnHeaderBackgroundColor">#373737</Color>
+  <Color x:Key="TrackListColumnHeaderBackgroundColor">#202020</Color>
   <Color x:Key="TrackListItemForegroundColor">#F0F0F0</Color>
-  <Color x:Key="TrackListItemBackgroundAlt1Color">#373737</Color>
-  <Color x:Key="TrackListItemBackgroundAlt2Color">#3C3C3C</Color>
+    <Color x:Key="TrackListItemBackgroundAlt1Color">#383838</Color>
+    <Color x:Key="TrackListItemBackgroundAlt2Color">#4F4F4F</Color>
   <Color x:Key="TrackListSelectedItemForegroundColor">#F0F0F0</Color>
   <Color x:Key="TrackListSelectedItemBackgroundColor">#186868</Color>
   <Color x:Key="TrackListMouseOverItemForegroundColor">#F0F0F0</Color>
@@ -43,7 +43,7 @@
   <Color x:Key="TrackListHyperlinkForegroundColor">#76CAFE</Color>
 
   <Color x:Key="PlayerForegroundColor">#C8C8C8</Color>
-  <Color x:Key="PlayerBackgroundColor">#373737</Color>
+  <Color x:Key="PlayerBackgroundColor">#202020</Color>
 
   <Color x:Key="MenuForegroundColor">#505050</Color>
   <Color x:Key="MenuBackgroundColor">#FCF7E3</Color>
