--- a/LinkerPlayer/Windows/MainWindow.xaml
+++ b/LinkerPlayer/Windows/MainWindow.xaml
@@ -1,10 +1,11 @@
-﻿<Window
+<Window
   x:Class="LinkerPlayer.Windows.MainWindow"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
+  xmlns:persist="clr-namespace:LinkerPlayer"
   Title="LinkerPlayer"
   Width="800"
   Height="600"
@@ -82,7 +83,8 @@
         Grid.Row="0"
         Grid.Column="1"
         HorizontalAlignment="Stretch"
-        Background="Transparent" />
+        Background="Transparent"
+        persist:GridSplitterPersistence.PersistKey="MainWindow.Columns" />
 
       <userControls:PlaylistTabs
         x:Name="PlaylistTabs"
