--- a/LinkerPlayer/App.xaml
+++ b/LinkerPlayer/App.xaml
@@ -31,13 +31,13 @@
 
       <Style TargetType="{x:Type Window}">
         <Setter Property="FontFamily" Value="Segoe UI" />
-        <Setter Property="FontWeight" Value="Regular" />
+        <Setter Property="FontWeight" Value="Light" />
         <Setter Property="FontSize" Value="9" />
       </Style>
 
       <Style TargetType="{x:Type UserControl}">
         <Setter Property="FontFamily" Value="Segoe UI" />
-        <Setter Property="FontWeight" Value="Regular" />
+        <Setter Property="FontWeight" Value="Light" />
         <Setter Property="FontSize" Value="9" />
       </Style>
     </ResourceDictionary>
