--- a/LinkerPlayer/UserControls/PlaylistTabs.xaml
+++ b/LinkerPlayer/UserControls/PlaylistTabs.xaml
@@ -119,7 +119,6 @@
         </Setter>
       </Style>
 
-      <!--  Keep the keyed TabItemContainerStyle but do not apply it to Dragablz, since Dragablz handles dragging internally  -->
       <Style x:Key="TabItemContainerStyle" TargetType="TabItem">
         <Setter Property="Background" Value="{DynamicResource PlaylistTabBackgroundBrush}" />
         <Setter Property="BorderThickness" Value="1" />
@@ -161,19 +160,26 @@
                 Drop="TabItem_Drop"
                 PreviewMouseLeftButtonDown="TabItem_PreviewMouseLeftButtonDown"
                 PreviewMouseMove="TabItem_PreviewMouseMove"
-                Style="{StaticResource EditableTabHeaderControl}">
+                Style="{StaticResource EditableTabHeaderControl}"
+                Tag="{Binding DataContext, RelativeSource={RelativeSource AncestorType=UserControl}}">
                 <userControls:EditableTabHeaderControl.ContextMenu>
                   <ContextMenu>
-                    <MenuItem Click="MenuItem_NewPlaylist" Header="New Playlist" />
-                    <MenuItem Click="MenuItem_NewPlaylistFromFolder" Header="New Playlist From Folder" />
-                    <MenuItem Click="MenuItem_LoadPlaylistAsync" Header="Load Playlist" />
+                    <MenuItem Command="{Binding PlacementTarget.Tag.NewPlaylistCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" Header="New Playlist" />
+                    <MenuItem Command="{Binding PlacementTarget.Tag.NewPlaylistFromFolderCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" Header="New Playlist From Folder" />
+                    <MenuItem Command="{Binding PlacementTarget.Tag.LoadPlaylistCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" Header="Load Playlist" />
                     <Separator />
-                    <MenuItem Click="MenuItem_AddFolder" Header="Add Folder" />
-                    <MenuItem Click="MenuItem_AddFiles" Header="Add Files" />
+                    <MenuItem Command="{Binding PlacementTarget.Tag.AddFolderCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" Header="Add Folder" />
+                    <MenuItem Command="{Binding PlacementTarget.Tag.AddFilesCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" Header="Add Files" />
                     <Separator />
-                    <MenuItem Click="MenuItem_RenamePlaylist" Header="Rename Playlist" />
+                    <MenuItem
+                      Command="{Binding PlacementTarget.Tag.RenamePlaylistCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
+                      CommandParameter="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
+                      Header="Rename Playlist" />
                     <Separator />
-                    <MenuItem Click="MenuItem_RemovePlaylist" Header="Remove Playlist" />
+                    <MenuItem
+                      Command="{Binding PlacementTarget.Tag.RemovePlaylistCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
+                      CommandParameter="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
+                      Header="Remove Playlist" />
                   </ContextMenu>
                 </userControls:EditableTabHeaderControl.ContextMenu>
                 <userControls:EditableTabHeaderControl.Content>
@@ -229,6 +235,7 @@
       <DataTemplate x:Key="TabContentTemplate" DataType="{x:Type models:PlaylistTab}">
         <Grid>
           <DataGrid
+            PreviewMouseRightButtonDown="DataGrid_PreviewMouseRightButtonDown"
             Name="PlaylistDataGrid"
             Margin="0,0,0,0"
             HorizontalAlignment="Stretch"
@@ -276,6 +283,10 @@
               <!--  Apply custom scrollbars implicitly within the DataGrid scope  -->
               <Style BasedOn="{StaticResource CustomScrollBarStyle}" TargetType="{x:Type ScrollBar}" />
             </DataGrid.Resources>
+
+            <DataGrid.Tag>
+              <Binding Path="DataContext" RelativeSource="{RelativeSource AncestorType=UserControl}" />
+            </DataGrid.Tag>
 
             <b:Interaction.Triggers>
               <b:EventTrigger EventName="DragOver">
@@ -415,9 +426,9 @@
 
             <DataGrid.ContextMenu>
               <ContextMenu>
-                <MenuItem Click="MenuItem_PlayTrack" Header="Play" />
-                <MenuItem Click="MenuItem_RemoveTrack" Header="Remove" />
-                <MenuItem Click="MenuItem_Properties" Header="Properties" />
+                <MenuItem Header="Play" Command="{Binding PlacementTarget.Tag.PlayTrackCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
+                <MenuItem Header="Remove" Command="{Binding PlacementTarget.Tag.RemoveTrackCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
+                <MenuItem Header="Properties" Command="{Binding PlacementTarget.Tag.ShowPropertiesCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
               </ContextMenu>
             </DataGrid.ContextMenu>
           </DataGrid>
@@ -448,15 +459,17 @@
       <TabControl.ContentTemplate>
         <StaticResource ResourceKey="TabContentTemplate" />
       </TabControl.ContentTemplate>
+      <TabControl.Tag>
+        <Binding Path="DataContext" RelativeSource="{RelativeSource AncestorType=UserControl}" />
+      </TabControl.Tag>
       <TabControl.ContextMenu>
         <ContextMenu>
-          <MenuItem Click="MenuItem_NewPlaylist" Header="New Playlist" />
-          <MenuItem Click="MenuItem_NewPlaylistFromFolder" Header="New Playlist From Folder" />
-          <MenuItem Click="MenuItem_LoadPlaylistAsync" Header="Load Playlist" />
+          <MenuItem Command="{Binding PlacementTarget.Tag.NewPlaylistCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" Header="New Playlist" />
+          <MenuItem Command="{Binding PlacementTarget.Tag.NewPlaylistFromFolderCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" Header="New Playlist From Folder" />
+          <MenuItem Command="{Binding PlacementTarget.Tag.LoadPlaylistCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" Header="Load Playlist" />
         </ContextMenu>
       </TabControl.ContextMenu>
     </TabControl>
-    <!--<Border BorderBrush="red" BorderThickness="1" />-->
   </Grid>
 
 </UserControl>
